[package]
name = "ejdb2"
version = "0.0.1"
authors = ["Shi Yan <billconan@gmail.com>"]
description = "Bindings for EJDB2, an single file embedded no-sql database"
repository = "https://github.com/netvl/ejdb.rs"
documentation = "https://netvl.github.io/ejdb.rs/"
readme = "Readme.md"
keywords = ["ejdb2", "database", "json", "bson", "ffi"]
license = "MIT"

[badges]
maintenance = { status = "looking-for-maintainer" }

[lib]
name = "ejdb2"

[dependencies]
ejdb-sys = { path = "ejdb-sys", version = "0.3" }
serde_json = "1.0"
scopeguard = "1.1.0"

[dev-dependencies]
tempdir = "0.3"
