[package]
name = "ejdb2"
version = "0.0.5"
authors = ["Shi Yan <billconan@gmail.com>"]
description = "Bindings for EJDB2, an single file embedded no-sql database"
repository = "https://github.com/shi-yan/ejdb2rs"
documentation = "https://github.com/shi-yan/ejdb2rs"
readme = "README.md"
keywords = ["ejdb2", "database", "json", "bson", "ffi"]
license = "MIT"

[badges]
maintenance = { status = "experimental" }

[lib]
name = "ejdb2"

[dependencies]
ejdb2-sys = "2.61.0"
serde_json = "1.0"

