[package]
name = "ejdb2-sys"
version = "2.61.0"
authors = ["Shi Yan <billconan@gmail.com>"]
repository = "https://github.com/shi-yan/ejdb2rs/tree/master/rust/ejdb-sys"
description = "Rust binding for EJDB2"
keywords = ["ejdb", "database", "ffi"]
license = "MIT"
links = "ejdb2"
build = "build.rs"

[build-dependencies]
pkg-config = "0.3"
cmake = "0.1"
bindgen = "0.59"

[dependencies]
libc = "0.2"

 [lib]
 doctest = false
